feat: add documentations for creating blogs
