# docs/swagger.json
@@ -11,5 +11,59 @@
     },
     "host": "api.freejing.com",
     "basePath": "/v1",
-    "paths": {}
+    "paths": {
+        "/blogs": {
+            "post": {
+                "description": "Create new blog post",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "blog"
+                ],
+                "summary": "Create new blog post",
+                "parameters": [
+                    {
+                        "description": "Create Blog Post",
+                        "name": "post",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/blog.Post"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/blog.Post"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "blog.Post": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "create_date": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        }
+    }
 }
